added content, video and fixed media queries

--- a/style.css
+++ b/style.css
@@ -105,22 +105,24 @@ header h2{
 .menu ul{
     display:flex;
     justify-content: flex-end;
+    padding: 0;
+    
 }
 
 .menu li, a{
-    padding: 1em;
+    padding: .2em;
     list-style: none;
     color:var(--clr-light);
-    font-size: var(--fs-li);
-    
-
+    font-size: var(--fs-p);
+    text-decoration: none;
 }
 .menu a:hover{
-    color:var(--clr-accent3)
+    color:var(--clr-accent2)
 }
 
 .logo{
-    height: 8rem;
+    height: 5rem;
+    margin: .1em;
 }
 
 #story{
@@ -166,6 +168,25 @@ header h2{
         float:right;
         justify-content: flex-end;
     }
+
+    .logo{
+        height: 8rem;
+        margin: .1em;
+
+    }
+    .menu{
+       
+    }
+    .menu li, a{
+        padding: .2em;
+        list-style: none;
+        color:var(--clr-light);
+        font-size: var(--fs-h3);
+        text-decoration: none;
+    }
+    .menu ul{
+        width: 90%;
+    }
 }
 
 
@@ -177,8 +198,10 @@ header h2{
 @media only screen and (min-width:600px){
 
     .storyContainer{
-        height: 50vh;
+        height: 60vh;
         margin-left: 3em;
+        padding-bottom: 4em;
+        margin-bottom: 4em;
         
     }
 
@@ -254,6 +277,9 @@ header h2{
 .featImg{
    width: 33.3%;
   
+}
+.featureTxt{
+    width: 66.66%;
 }
 
 /*Create section - link to demo*/
