fixed learn page header

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ header h2{
     text-decoration: none;
 }
 .menu a:hover{
-    color:var(--clr-accent2)
+    color:var(--clr-accent1)
 }
 
 .logo{
@@ -133,7 +133,7 @@ header h2{
     text-align: left;
     position: absolute;
     top: 40%;
-    left: 4rem;
+    left: 5rem;
     margin-bottom: 1rem;
 
 }
@@ -172,6 +172,15 @@ header h2{
         margin-right: 20%;
         margin-top: 10%;
         justify-self: end;
+    }
+
+    .heroTxt{
+        text-align: left;
+        position: absolute;
+        top: 35%;
+        left: 15rem;
+        margin-bottom: 1rem;
+    
     }
 
     .logo{
